# countdown

./: .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
lib/: claude_client.py  dictionary.py  game_generator.py  llm_client.py  solver.py  validator.py  wikipedia_rag.py
screens/: conundrum.py  intro.py  letter_round.py  loading.py  number_round.py  results.py  round_result.py  setup.py  theme_guess.py
static/: style.css
templates/: base.html  conundrum.html  handoff.html  intro.html  letter_round.html  loading.html  number_round.html  results.html  round_result.html  setup.html  theme_guess.html  theme_result.html
