[project]
name = "countdown"
version = "0.1.0"
description = "AI-powered two-player Countdown game show built with Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "numpy>=1.26.0",
    "openai>=2.40.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.35.0",
    "wikipedia>=1.4.0",
]
